--- a/public/index.html
+++ b/public/index.html
@@ -165,10 +165,18 @@
               </div>
               <h1 className="text-xl font-semibold">Kira</h1>
             </div>
-            <div className="text-xs text-gray-400 flex gap-2">
-              <span>📱 Push: ON</span>
-              <span>📅 Cal: ON</span>
-              <span>🔔 Rem: ON</span>
+            <div className="flex items-center gap-2">
+              <button
+                onClick={() => {
+                  localStorage.clear();
+                  window.location.reload();
+                }}
+                className="text-xs text-gray-400 flex items-center gap-1 px-2 py-1 rounded-lg border border-gray-700"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round" className="w-3 h-3">
+                  <path d="M3 6h18"/><path d="M19 6v14c0 1 1 2 2H7c-1 0 2-1-2V6"/><path d="M3 3v5h5"/><polyline points="17 8 12 3 7 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
+                <span>Cancella Cache</span>
+              </button>
             </div>
           </div>
 
