fix: aggressive cache-busting with version v3

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-  <title>Kira Chat</title>
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, max-age=0">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
+  <meta name="cache-buster" content="v3-20260222-07">
+  <title>Kira Chat v3 - 22 Feb 2026</title>
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js?v=2"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js?v=2"></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js?v=2"></script>
+  <script src="https://cdn.tailwindcss.com?v=2"></script>
   <style>
     body { background: #000; color: #fff; -webkit-tap-highlight-color: transparent; }
     ::-webkit-scrollbar { display: none; }
